--- a/README.Rmd
+++ b/README.Rmd
@@ -40,7 +40,7 @@ library(plFA)
 set.seed(123)
 
 # p = number of items, q = number of latent variables, n = number of observations
-p <- 40; q <- 8; n <- 5000L
+p <- 30; q <- 8; n <- 1000L
 
 # Simple loading matrix constraints
 A <- build_constrMat(P = p, Q = q, STRUCT = 'simple')
@@ -70,23 +70,24 @@ theta <- getPar(get_theta(rep(thr, p), Load, S, cat, A), C = sum(cat), P = p, Q 
 
 Estimate the model with the stochastic optimiser
 
-```{r}
+```{r sto}
 
 # Set options for cpp stochastic optimiser
 cpp_ctrl <- list(
-  MAXT = 10000,
+  MAXT = 2*n,
   PAIRS_PER_ITERATION = 8
 )
 
 # Fit the model with stochastic optimiser
 stFit <- fit_plFA(
   DATA = D,
+  VALDATA = D,
   CONSTR_LIST = list('CONSTRMAT' = A, 'CORRFLAG'= 1),
   METHOD = 'hyper',
   CONTROL = cpp_ctrl,
   ITERATIONS_SUBSET = seq(0, cpp_ctrl$MAXT, 100)
 )
-
+stFit
 # extract estimated parameter vector
 stPar <- getPar(stFit)
 
@@ -99,7 +100,7 @@ mean((stPar-theta)^2)
 ```
 
 Numerical estimation as comparison
-```{r}
+```{r num}
 numFit <- fit_plFA(
   DATA = D,
   CONSTR_LIST = list('CONSTRMAT' = A, 'CORRFLAG'=1),
@@ -113,6 +114,21 @@ numParList <- getPar(numFit, OPTION = 'list')
 
 # mean square error
 mean((numPar-theta)^2)
+```
+
+Compute standard errors 
+```{r stovar}
+stovar <- computeVar(OBJ = stFit, DATA = D, NUMDERIV = T)
+stose <- sqrt(stovar$optimisation_noise+stovar$asymptotic_variance)
+stose[1:10]
+
+```
+
+```{r numvar}
+
+numvar <- computeVar(OBJ = numFit, DATA = D, NUMDERIV = T)
+numse <- sqrt(numvar$asymptotic_variance)
+numse[1:10]
 ```
 
 
