--- a/README.Rmd
+++ b/README.Rmd
@@ -18,6 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![CRAN status](https://www.r-pkg.org/badges/version/plFA)](https://CRAN.R-project.org/package=plFA)
+[![R-CMD-check](https://github.com/giuseppealfonzetti/plFA/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/giuseppealfonzetti/plFA/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 The plFA package allows the estimation of confirmatory factor models for ordinal data using stochastic and numeric pairwise likelihood optimisation. 
@@ -52,7 +53,7 @@ Load <- gen_loadings(CONSTRMAT = A)
 thr <- c(-1.5, 0, 1.5)
 
 # Generate random latent correlation matrix
-S <- get_S(THETA = rnorm(q*(q-1)/2), Q = q)
+S <- get_S(THETA = rnorm(q*(q-1)/2), Q = q, CORRFLAG = 1)
 
 # simulate the data
 D <- sim_data(
@@ -65,39 +66,39 @@ D <- sim_data(
 cat <- apply(D, 2, max) + 1
 
 # store true parameter vector (interpretable parameterisation)
-theta <- getPar(get_theta(rep(thr, p), Load, S, cat, A), C = sum(cat), P = p, Q = q, CONSTRMAT = A)
+theta <- get_theta(rep(thr, p), Load, S, cat, A, CORRFLAG = 1)
 ```
 
-Estimate the model with the stochastic optimiser
+<!-- Estimate the model with the stochastic optimiser -->
 
-```{r sto}
+<!-- ```{r sto} -->
 
-# Set options for cpp stochastic optimiser
-cpp_ctrl <- list(
-  MAXT = 2*n,
-  PAIRS_PER_ITERATION = 8
-)
+<!-- # Set options for cpp stochastic optimiser -->
+<!-- cpp_ctrl <- list( -->
+<!--   MAXT = 2*n, -->
+<!--   PAIRS_PER_ITERATION = 8 -->
+<!-- ) -->
 
-# Fit the model with stochastic optimiser
-stFit <- fit_plFA(
-  DATA = D,
-  VALDATA = D,
-  CONSTR_LIST = list('CONSTRMAT' = A, 'CORRFLAG'= 1),
-  METHOD = 'hyper',
-  CONTROL = cpp_ctrl,
-  ITERATIONS_SUBSET = seq(0, cpp_ctrl$MAXT, 100)
-)
-stFit
-# extract estimated parameter vector
-stPar <- getPar(stFit)
+<!-- # Fit the model with stochastic optimiser -->
+<!-- stFit <- fit_plFA( -->
+<!--   DATA = D, -->
+<!--   VALDATA = D, -->
+<!--   CONSTR_LIST = list('CONSTRMAT' = A, 'CORRFLAG'= 1), -->
+<!--   METHOD = 'hyper', -->
+<!--   CONTROL = cpp_ctrl, -->
+<!--   ITERATIONS_SUBSET = seq(0, cpp_ctrl$MAXT, 100) -->
+<!-- ) -->
+<!-- stFit -->
+<!-- # extract estimated parameter vector -->
+<!-- stPar <- getPar(stFit) -->
 
-# extract list of parameter estimates
-stParList <- getPar(stFit, OPTION = 'list')
-matrixcalc::is.positive.definite(stParList$latent_correlations)
+<!-- # extract list of parameter estimates -->
+<!-- stParList <- getPar(stFit, OPTION = 'list') -->
+<!-- matrixcalc::is.positive.definite(stParList$latent_correlations) -->
 
-# mean square error
-mean((stPar-theta)^2)
-```
+<!-- # mean square error -->
+<!-- mean((stPar-theta)^2) -->
+<!-- ``` -->
 
 Numerical estimation as comparison
 ```{r num}
@@ -107,7 +108,7 @@ numFit <- fit_plFA(
   METHOD = 'ucminf')
 
 # extract estimated parameter vector
-numPar <- getPar(numFit)
+numPar <- getPar(numFit, 'raw')
 
 # extract list of parameter estimates
 numParList <- getPar(numFit, OPTION = 'list')
@@ -117,16 +118,17 @@ mean((numPar-theta)^2)
 ```
 
 Compute standard errors
-```{r stovar}
-stovar <- computeVar(OBJ = stFit, DATA = D, NUMDERIV = T)
-stose <- sqrt(stovar$optimisation_noise+stovar$asymptotic_variance)
-stose[1:10]
 
-```
+<!-- ```{r stovar} -->
+<!-- stovar <- computeVar(OBJ = stFit, DATA = D, NUMDERIV = T) -->
+<!-- stose <- sqrt(stovar$optimisation_noise+stovar$asymptotic_variance) -->
+<!-- stose[1:10] -->
+
+<!-- ``` -->
 
 ```{r numvar}
 
-numvar <- computeVar(OBJ = numFit, DATA = D, NUMDERIV = T)
+numvar <- computeVar(OBJ = numFit, DATA = D)
 numse <- sqrt(numvar$asymptotic_variance)
 numse[1:10]
 ```
