Update README, re-add coverage

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,7 @@ knitr::opts_chunk$set(
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![CRAN status](https://www.r-pkg.org/badges/version/plFA)](https://CRAN.R-project.org/package=plFA)
 [![R-CMD-check](https://github.com/giuseppealfonzetti/plFA/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/giuseppealfonzetti/plFA/actions/workflows/R-CMD-check.yaml)
+[![Codecov test coverage](https://codecov.io/gh/giuseppealfonzetti/plFA/graph/badge.svg)](https://app.codecov.io/gh/giuseppealfonzetti/plFA)
 <!-- badges: end -->
 
 The `{plFA}` package allows the estimation of confirmatory factor models for ordinal data using stochastic and numeric pairwise likelihood optimisation. 
@@ -78,8 +79,8 @@ summary(fit)
 All^[Most :)--we're working on it!] `lavaan` methods should carry over, such as:
 
 ```{r}
-coef(fit)
-head(parameterEstimates(fit))
+head(coef(fit), 10)
+head(parameterestimates(fit, se = TRUE))
 head(fitted(fit)$cov)  # model-implied covariance matrix for the UVs
 ```
 
